tests/invalid/mutate_string_literal.ar
fn main() {
    var strlit = "hell0 world!";
    strlit[4] = 65;
}

//! tests/invalid/mutate_string_literal.ar:3:11: error: cannot mutate read-only location with type `*const [12]u8`
